src/styles/ui/layout.module.css
.fullWidth {
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  padding: var(--space-lg);
}

.withSidebar {
  position: relative;
  display: grid;
  grid-template-columns: var(--space-sidebar) auto;
  column-gap: var(--space-lg);
  padding: var(--space-lg);
}

.sidebar {
  position: sticky;
  top: var(--space-lg);
  height: calc(100vh - var(--space-lg) * 2);
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  z-index: 10;

  /* Hide scrollbar */
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.sidebar::-webkit-scrollbar {
  display: none; 
}

.sidebarBottom {
  margin-top: auto;
  padding-top: var(--space-lg);
}

@media (max-width: 768px) {
  
  .withSidebar,
  .fullWidth {
    display: flex;
    flex-direction: column;
    order: 1;
    padding: var(--space-md);
  }

  .sidebar {
    position: static;
    width: 100%;
    height: auto;
    margin: 0;
    order: 2;
  }

  .content {
    margin-left: 0;
    padding: 0;
    padding-top: calc( var(--space-sm) + var(--space-2xl));
  }

  .sidebarBottom {
    margin-top: 0;
    border-top: none;
    padding-top: 0;
  }
}

